# medspacy_scratch

./: pyproject.toml  requirements_tests.txt  setup.py  tests_requirements.txt
.github/workflows/: manual_pip_simple_install.yml  manual_test_pip.yml  python-app.yml  single_pip_install_test.yml  tests_requirements.txt
