[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "medspacy"
dynamic = ["version"]
authors = [{name = "medSpaCy"}]
description = "Library for clinical NLP with spaCy."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "spacy >= 3.4.1, < 4.0",
    "PyRuSH >= 1.0.8",
    "pysbd == 0.3.4",
    "jsonschema",
    "medspacy_quickumls == 2.7; sys_platform != 'win32'"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["resources"]

[tool.setuptools_scm]
write_to = "medspacy/_version.py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"